@@ -1,4 +1,8 @@
-##### Mon 22/06/2012
+##### Tue 26/06/2012
+* Rename the module name in instances after the module name is re-calculated with parameters.
+* Added a write command in avs_shell to write out a design.
+
+##### Mon 25/06/2012
 * Modified Makefile so there is no target test.
 * Fixed a stupid misuse of reference in netlist::RangeArray::is_declaration(). Reference assign is not pointer assignment!
 * Fixed some bugs in case expression check and now consider numbers with x/z as constant and valuable.
